<resources>
    <string name="app_name">screenlogin</string>
    <string name="inicia_sesion">Inicia sesión</string>
    <string name="contraseña">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="edit_usuario">Ingresa tu Usuario</string>
    <string name="edit_contraseña">Ingresa tu Contraseña</string>
    <string name="recordar_contraseña">Recordar Contraseña</string>
    <string name="olvidar">OLVIDE MI CONTRASEÑA</string>
    <string name="entrar">INGRESAR</string>
    <string name="Correo">MiCorreo@ejemplo.com</string>
    <string name="enviar">Enviar</string>
</resources>